Atualização contato cnpj para WABA whatsapp

--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@
                 <div class="col-lg-12">
                     <h2>CONTATO</h2>
                     <ul class="list-unstyled li-space-lg">
-                        <!--<li class="address">Não hesite em entrar em contato com a gente!</li>
-                         <li><i class="fas fa-map-marker-alt"></i>Marília/SP</li> 
-                        <li><i class="fas fa-phone"></i><a class="blue" href="tel:+55159957040256">+55 (14) 9.9704-0256</a></li>-->
-                        <li><i class="fas fa-envelope"></i><a class="blue" href="mailto:suporte@banhopet.com.br">suporte@banhopet.com.br</a></li>
+                        <li class="address"></li><br>
+                         <li><i class="fas fa-map-marker-alt"></i>Rua Olavo Bilac, 51 - Marília/SP</li> 
+                        <li><i class="fas fa-phone"></i><a class="blue" href="tel:+55159957040256">+55 (14) 996871476</a></li><br>
+                        <li><i class="fas fa-envelope"></i><a class="blue" href="mailto:banhopet.sistema@gmail.com">banhopet.sistema@gmail.com</a></li>
                     </ul>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -265,7 +265,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © JRGIROTTO TECNOLOGIA - by <a href="http://www.jrgirotto.com.br">JRGIROTTO</a></p>
+                    <p class="p-small">Banho Pet® é uma marca registrada da empresa JRGIROTTO TECNOLOGIA 18.807.247/0001-80</a></p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
