--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     <title>BanhoPet - App para Tutores e Cadastro para Petshops</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         tailwind.config = {
             theme: {
@@ -69,17 +67,11 @@
             </div>
         </div>
     </nav>
-    <script>
-        document.getElementById('navbar-toggle').addEventListener('click', function() {
-            document.getElementById('navbar-menu').classList.toggle('hidden');
-        });
-    </script>
 
     <!-- Header -->
-    <header id="header" class="relative bg-white pt-24 pb-20">
+    <header id="header" class="relative bg-white pt-24 pb-20" opacity-0" data-aos="fade-in">
         <div class="container mx-auto px-4">
             <div class="flex flex-col items-center">
-                
                 <div class="flex flex-col md:flex-row items-center">
                     <div class="md:w-1/2 text-center md:text-left mb-12 md:mb-0">
                         <h1 class="text-5xl md:text-6xl font-bold font-montserrat text-banhopet-blue mb-4 animate-slide-up">
@@ -90,13 +82,13 @@
                         </h2>
                         <p class="text-lg md:text-xl text-gray-600 mb-8 animate-slide-up">
                             <span class='text-banhopet-blue font-bold'>Tutores:</span> Agende Banho e Tosa e mais serviços com facilidade.<br>
-							<span class='text-banhopet-orange font-bold'>Petshops:</span> Alcance mais Tutores e gerencie agendamentos.
+                            <span class='text-banhopet-orange font-bold'>Petshops:</span> Alcance mais Tutores e gerencie agendamentos.
                         </p>
                         <div class="flex justify-center md:justify-start space-x-4 animate-slide-up">
-							<div class="flex justify-center md:justify-start space-x-4 mt-4">
-								<a href="#" class="bg-transparent hover:bg-blue-800 text-blue-800 font-semibold hover:text-white py-3 px-6 border border-blue-800 hover:border-transparent rounded-lg transition-colors duration-300">Baixe o App</a>
-								<a href="#signup" class="bg-transparent hover:bg-orange-500 text-orange-500 font-semibold hover:text-white py-3 px-6 border border-orange-500 hover:border-transparent rounded-lg transition-colors duration-300">Cadastre seu Petshop</a>
-							</div>
+                            <div class="flex justify-center md:justify-start space-x-4 mt-4">
+                                <a href="#" class="bg-transparent hover:bg-blue-800 text-blue-800 font-semibold hover:text-white py-3 px-6 border border-blue-800 hover:border-transparent rounded-lg transition-colors duration-300">Baixe o App</a>
+                                <a href="#signup" class="bg-transparent hover:bg-orange-500 text-orange-500 font-semibold hover:text-white py-3 px-6 border border-orange-500 hover:border-transparent rounded-lg transition-colors duration-300">Cadastre seu Petshop</a>
+                            </div>
                         </div>
                     </div>
                     <div class="md:w-1/2 relative animate-fade-in">
@@ -151,74 +143,53 @@
         </div>
     </div>
 
- <!-- Cadastro Rápido -->
-<div id="signup" class="py-16 bg-white">
-    <div class="container mx-auto px-4">
-        <div class="text-center mb-12">
-            <h2 class="text-3xl md:text-4xl font-bold font-montserrat text-banhopet-blue mb-4" data-aos="fade-up">Cadastre seu Petshop Agora!</h2>
-            <p class="text-lg md:text-xl text-gray-600" data-aos="fade-up" data-aos-delay="100">Preencha os dados abaixo e comece a alcançar mais clientes.</p>
+    <!-- Cadastro Rápido -->
+    <div id="signup" class="py-16 bg-white">
+        <div class="container mx-auto px-4">
+            <div class="text-center mb-12">
+                <h2 class="text-3xl md:text-4xl font-bold font-montserrat text-banhopet-blue mb-4" data-aos="fade-up">Cadastre seu Petshop Agora!</h2>
+                <p class="text-lg md:text-xl text-gray-600" data-aos="fade-up" data-aos-delay="100">Preencha os dados abaixo e comece a alcançar mais clientes.</p>
+            </div>
+            <div class="max-w-3xl mx-auto" data-aos="fade-up" data-aos-delay="200">
+                <form id="signupForm" action="http://localhost:3000/petshop/cadastro" method="POST">
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-4 md:gap-6 mb-4 md:mb-6">
+                        <div class="relative">
+                            <input type="text" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-banhopet-orange peer" id="nomePetShop" name="nome" placeholder=" " required>
+                            <label for="nomePetShop" class="absolute left-3 top-3 text-gray-500 transition-all duration-300 peer-placeholder-shown:top-3 peer-placeholder-shown:text-base peer-focus:-top-2 peer-focus:text-sm peer-focus:text-banhopet-orange peer-valid:-top-2 peer-valid:text-sm peer-valid:text-banhopet-orange bg-white px-1">Nome do Petshop</label>
+                        </div>
+                        <div class="relative">
+                            <input type="text" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-banhopet-orange peer" id="cnpj" name="cnpj" placeholder=" " required oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0,14)">
+                            <label for="cnpj" class="absolute left-3 top-3 text-gray-500 transition-all duration-300 peer-placeholder-shown:top-3 peer-placeholder-shown:text-base peer-focus:-top-2 peer-focus:text-sm peer-focus:text-banhopet-orange peer-valid:-top-2 peer-valid:text-sm peer-valid:text-banhopet-orange bg-white px-1">CNPJ (somente números)</label>
+                        </div>
+                    </div>
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-4 md:gap-6 mb-4 md:mb-6">
+                        <div class="relative">
+                            <input type="email" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-banhopet-orange peer" id="email" name="email" placeholder=" " required>
+                            <label for="email" class="absolute left-3 top-3 text-gray-500 transition-all duration-300 peer-placeholder-shown:top-3 peer-placeholder-shown:text-base peer-focus:-top-2 peer-focus:text-sm peer-focus:text-banhopet-orange peer-valid:-top-2 peer-valid:text-sm peer-valid:text-banhopet-orange bg-white px-1">E-mail</label>
+                        </div>
+                        <div class="relative">
+                            <input type="text" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-banhopet-orange peer" id="telefone" name="telefone" placeholder=" " required oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0,11)">
+                            <label for="telefone" class="absolute left-3 top-3 text-gray-500 transition-all duration-300 peer-placeholder-shown:top-3 peer-placeholder-shown:text-base peer-focus:-top-2 peer-focus:text-sm peer-focus:text-banhopet-orange peer-valid:-top-2 peer-valid:text-sm peer-valid:text-banhopet-orange bg-white px-1">WhatsApp/Telefone (somente números)</label>
+                        </div>
+                    </div>
+                    <div class="mb-4 md:mb-6 relative">
+                        <input type="password" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-banhopet-orange peer" id="senha" name="senha" placeholder=" " required minlength="8">
+                        <label for="senha" class="absolute left-3 top-3 text-gray-500 transition-all duration-300 peer-placeholder-shown:top-3 peer-placeholder-shown:text-base peer-focus:-top-2 peer-focus:text-sm peer-focus:text-banhopet-orange peer-valid:-top-2 peer-valid:text-sm peer-valid:text-banhopet-orange bg-white px-1">Senha (mín. 8 caracteres)</label>
+                    </div>
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-4 md:gap-6 mb-4 md:mb-6">
+                        <div class="relative">
+                            <input type="text" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-banhopet-orange peer" id="cep" name="cep" placeholder=" " required oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0,8)">
+                            <label for="cep" class="absolute left-3 top-3 text-gray-500 transition-all duration-300 peer-placeholder-shown:top-3 peer-placeholder-shown:text-base peer-focus:-top-2 peer-focus:text-sm peer-focus:text-banhopet-orange peer-valid:-top-2 peer-valid:text-sm peer-valid:text-banhopet-orange bg-white px-1">CEP (somente números - Ex.: 17500999)</label>
+                        </div>
+                        <div class="relative">
+                            <input type="text" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-banhopet-orange peer" id="numero" name="numero" placeholder=" " required>
+                            <label for="numero" class="absolute left-3 top-3 text-gray-500 transition-all duration-300 peer-placeholder-shown:top-3 peer-placeholder-shown:text-base peer-focus:-top-2 peer-focus:text-sm peer-focus:text-banhopet-orange peer-valid:-top-2 peer-valid:text-sm peer-valid:text-banhopet-orange bg-white px-1">Número (número do imóvel do Petshop)</label>
+                        </div>
+                    </div>
+                    <button type="submit" class="w-full bg-banhopet-orange text-white p-4 rounded-lg font-semibold hover:bg-orange-600 transition-all duration-300 hover:scale-105 hover:shadow-lg">Iniciar Cadastro do Petshop</button>
+                </form>
+            </div>
         </div>
-        <div class="max-w-3xl mx-auto" data-aos="fade-up" data-aos-delay="200">
-            <form id="signupForm" action="/api/petshop/cadastro" method="POST">
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-4 md:gap-6 mb-4 md:mb-6">
-                    <div class="relative">
-                        <input type="text" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-banhopet-orange peer" id="nomePetShop" name="nome" placeholder=" " required>
-                        <label for="nomePetShop" class="absolute left-3 top-3 text-gray-500 transition-all duration-300 peer-placeholder-shown:top-3 peer-placeholder-shown:text-base peer-focus:-top-2 peer-focus:text-sm peer-focus:text-banhopet-orange peer-valid:-top-2 peer-valid:text-sm peer-valid:text-banhopet-orange bg-white px-1">Nome do Petshop</label>
-                    </div>
-                    <div class="relative">
-                        <input type="text" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-banhopet-orange peer" id="cnpj" name="cnpj" placeholder=" " required oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0,14)">
-                        <label for="cnpj" class="absolute left-3 top-3 text-gray-500 transition-all duration-300 peer-placeholder-shown:top-3 peer-placeholder-shown:text-base peer-focus:-top-2 peer-focus:text-sm peer-focus:text-banhopet-orange peer-valid:-top-2 peer-valid:text-sm peer-valid:text-banhopet-orange bg-white px-1">CNPJ (somente números)</label>
-                    </div>
-                </div>
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-4 md:gap-6 mb-4 md:mb-6">
-                    <div class="relative">
-                        <input type="email" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-banhopet-orange peer" id="email" name="email" placeholder=" " required>
-                        <label for="email" class="absolute left-3 top-3 text-gray-500 transition-all duration-300 peer-placeholder-shown:top-3 peer-placeholder-shown:text-base peer-focus:-top-2 peer-focus:text-sm peer-focus:text-banhopet-orange peer-valid:-top-2 peer-valid:text-sm peer-valid:text-banhopet-orange bg-white px-1">E-mail</label>
-                    </div>
-                    <div class="relative">
-                        <input type="text" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-banhopet-orange peer" id="telefone" name="telefone" placeholder=" " required oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0,11)">
-                        <label for="telefone" class="absolute left-3 top-3 text-gray-500 transition-all duration-300 peer-placeholder-shown:top-3 peer-placeholder-shown:text-base peer-focus:-top-2 peer-focus:text-sm peer-focus:text-banhopet-orange peer-valid:-top-2 peer-valid:text-sm peer-valid:text-banhopet-orange bg-white px-1">WhatsApp/Telefone (somente números)</label>
-                    </div>
-                </div>
-                <div class="mb-4 md:mb-6 relative">
-                    <input type="password" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-banhopet-orange peer" id="senha" name="senha" placeholder=" " required minlength="8">
-                    <label for="senha" class="absolute left-3 top-3 text-gray-500 transition-all duration-300 peer-placeholder-shown:top-3 peer-placeholder-shown:text-base peer-focus:-top-2 peer-focus:text-sm peer-focus:text-banhopet-orange peer-valid:-top-2 peer-valid:text-sm peer-valid:text-banhopet-orange bg-white px-1">Senha (mín. 8 caracteres)</label>
-                </div>
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-4 md:gap-6 mb-4 md:mb-6">
-                    <div class="relative">
-                        <input type="text" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-banhopet-orange peer" id="cep" name="cep" placeholder=" " required oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0,8)">
-                        <label for="cep" class="absolute left-3 top-3 text-gray-500 transition-all duration-300 peer-placeholder-shown:top-3 peer-placeholder-shown:text-base peer-focus:-top-2 peer-focus:text-sm peer-focus:text-banhopet-orange peer-valid:-top-2 peer-valid:text-sm peer-valid:text-banhopet-orange bg-white px-1">CEP (somente números - Ex.: 17500999)</label>
-                    </div>
-                    <div class="relative">
-                        <input type="text" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-banhopet-orange peer" id="numero" name="numero" placeholder=" " required>
-                        <label for="numero" class="absolute left-3 top-3 text-gray-500 transition-all duration-300 peer-placeholder-shown:top-3 peer-placeholder-shown:text-base peer-focus:-top-2 peer-focus:text-sm peer-focus:text-banhopet-orange peer-valid:-top-2 peer-valid:text-sm peer-valid:text-banhopet-orange bg-white px-1">Número (número do imóvel do Petshop)</label>
-                    </div>
-                </div>
-                <button type="submit" class="w-full bg-banhopet-orange text-white p-4 rounded-lg font-semibold hover:bg-orange-600 transition-all duration-300 hover:scale-105 hover:shadow-lg">Iniciar Cadastro do Petshop</button>
-            </form>
-            <script>
-                document.getElementById('signupForm').addEventListener('submit', function(event) {
-                    event.preventDefault();
-                    const formData = new FormData(this);
-                    fetch(this.action, {
-                        method: 'POST',
-                        body: formData
-                    })
-                    .then(response => response.json())
-                    .then(data => {
-                        if (data.message === 'Pet shop adicionado à lista de espera' || data.id) {
-                            window.location.href = 'http://localhost:8080/#/cadastro';
-                        } else {
-                            alert(data.message || 'Erro ao cadastrar. Tente novamente.');
-                        }
-                    })
-                    .catch(error => alert('Erro na requisição: ' + error));
-                });
-            </script>
-        </div>
-    </div>
-</div>
-
     </div>
 
     <!-- Contato -->
@@ -243,28 +214,21 @@
     </div>
 
     <!-- Footer -->
-<footer id="footer" class="bg-banhopet-blue text-white py-6">
-    <div class="container mx-auto px-4 text-center">
-        <div class="mb-4">
-            <img src="images/logo.png" alt="Logo BanhoPet" class="h-10 w-auto mx-auto" loading="lazy">
-			<p class="text-base mb-3">WE 🧡 PETS!</p>
+    <footer id="footer" class="bg-banhopet-blue text-white py-6">
+        <div class="container mx-auto px-4 text-center">
+            <div class="mb-4">
+                <img src="images/logo.png" alt="Logo BanhoPet" class="h-10 w-auto mx-auto" loading="lazy">
+                <p class="text-base mb-3">WE 🧡 PETS!</p>
+            </div>
+            <div class="flex justify-center space-x-4 mb-3">
+                <a href="https://www.instagram.com/banhopetoficial" target="_blank" class="text-white hover:text-banhopet-orange transition-transform duration-300 hover:scale-110" aria-label="Instagram BanhoPet"><i class="fab fa-instagram text-xl"></i></a>
+                <a href="https://www.facebook.com/banhopetapp" target="_blank" class="text-white hover:text-banhopet-orange transition-transform duration-300 hover:scale-110" aria-label="Facebook BanhoPet"><i class="fab fa-facebook-f text-xl"></i></a>
+            </div>
+            <p class="text-xs mb-2">2025 Banho Pet® | Todos os direitos reservados | CNPJ: 18.807.247/0001-80 | JR GIROTTO TECNOLOGIA® | <a href="privacy-policy.html" class="text-white hover:text-banhopet-orange transition-colors duration-300 text-sm">Política de Privacidade</a></p>
         </div>
-        
-        <div class="flex justify-center space-x-4 mb-3">
-            <a href="https://www.instagram.com/banhopetoficial" target="_blank" class="text-white hover:text-banhopet-orange transition-transform duration-300 hover:scale-110" aria-label="Instagram BanhoPet"><i class="fab fa-instagram text-xl"></i></a>
-            <a href="https://www.facebook.com/banhopetapp" target="_blank" class="text-white hover:text-banhopet-orange transition-transform duration-300 hover:scale-110" aria-label="Facebook BanhoPet"><i class="fab fa-facebook-f text-xl"></i></a>
-        </div>
-        <p class="text-xs mb-2">2025 Banho Pet® | Todos os direitos reservados | CNPJ: 18.807.247/0001-80 | JR GIROTTO TECNOLOGIA® | <a href="privacy-policy.html" class="text-white hover:text-banhopet-orange transition-colors duration-300 text-sm">Política de Privacidade</a>
-    </div>
-</footer>
-
+    </footer>
 
     <!-- Scripts -->
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-        AOS.init({ duration: 800, once: true });
-    </script>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="dist/bundle.js" defer></script>
 </body>
 </html>
