Correções scripts form.js

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Baixe o app BanhoPet para agendar banho e tosa ou cadastre seu Petshop e alcance mais clientes.">
+    <meta name="description" content="Baixe o app BanhoPet para agendar banho e tosa | Cadastre seu Petshop e alcance mais clientes.">
     <meta name="author" content="JR GIROTTO">
-    <meta name="keywords" content="BanhoPet, app pet, agendamento banho e tosa, cadastro petshop, serviços pet">
+    <meta name="keywords" content="BanhoPet, Banho Pet, app pet, agendamento banho e tosa, cadastro petshop, serviços pet">
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="BanhoPet - App para Tutores e Cadastro para Petshops"/>
-    <meta property="og:description" content="Baixe o app BanhoPet para agendar banho e tosa ou cadastre seu Petshop e alcance mais clientes."/>
+    <meta property="og:description" content="Baixe o app BanhoPet para agendar Banho e tTsa | Cadastre seu Petshop e alcance mais clientes.">
     <meta property="og:image" content="images/og-image.jpg"/>
     <meta property="og:type" content="website"/>
     <title>BanhoPet - App para Tutores e Cadastro para Petshops</title>
@@ -230,5 +230,6 @@
 
     <!-- Scripts -->
     <script src="dist/bundle.js" defer></script>
+    <script type="module" src="js/form.js"></script>
 </body>
 </html>
