Add Botões svg download

--- a/index.html
+++ b/index.html
@@ -79,10 +79,11 @@
                         A Solução Completa para <span class="text-banhopet-blue">Tutores</span> e <span class="text-banhopet-orange">Petshops</span>!
                     </h2>
                     <p class="text-lg md:text-xl text-gray-600 mb-4">
-                        <span class='text-banhopet-blue font-bold'>Tutores:</span> Agende Banho e Tosa e mais serviços com facilidade.
+                        <span class='text-banhopet-blue font-bold'>Tutores:</span> Agende Banho e Tosa e demais serviços com facilidade.
                     </p>
-                    <div class="flex justify-start">
-                        <button onclick="alert('Em Breve...')" class="bg-transparent hover:bg-blue-800 text-blue-800 font-semibold hover:text-white py-3 px-6 border border-blue-800 hover:border-transparent rounded-lg transition-colors duration-300">Baixe o App</button>
+                    <div class="flex justify-start gap-4">
+                        <button onclick="alert('Em Breve...')" class="p-0 bg-transparent border border-banhopet-blue rounded-lg"><img src="images/download-android.svg" alt="Baixar no Google Play" class="h-12"/></button> 
+                        <button onclick="alert('Em Breve...')" class="p-0 bg-transparent border border-banhopet-blue rounded-lg"><img src="images/download-ios.svg" alt="Baixar na App Store" class="h-12"/></button> 
                     </div>
                     <p class="text-lg md:text-xl text-gray-600 mb-4 mt-8">
                         <span class='text-banhopet-orange font-bold'>Petshops:</span> Alcance mais Tutores e gerencie agendamentos.
@@ -214,7 +215,7 @@
                 </li>
                 <li class="flex justify-center items-center space-x-3">
                     <i class="fas fa-envelope text-2xl text-banhopet-orange transition-transform duration-300 hover:scale-110"></i>
-                    <span class="text-lg">suporte@banhopet.com.br</span>
+                    <span class="text-lg">banhopet.sistema@gmail.com</span>
                 </li>
             </ul>
         </div>
